--- a/app/views/safes/edit.html.erb
+++ b/app/views/safes/edit.html.erb
@@ -5,7 +5,7 @@
   
 <h1 style="margin-bottom: 0px;"><i class="fa fa-pencil-square-o" style="margin-right: 10px;"></i>Application for Complete</h1>
 <br><br>
-<div class="" style="padding:0px 10% 0px 10%;">
+<div class="" style="padding:0px 10% 0px 0%;">
   
 <script type="text/javascript">
   $('#micropost_picture').bind('change', function() {
@@ -39,7 +39,7 @@
 
 <br><br>
 
-<label for="price" style="margin-top: 10px;">Duration of call<span style="color:red; font-weight: bold;">*</span><small>（half-width alphanumeric)</small></label>
+<label for="price" style="margin-top: 10px;">Duration of call<span style="color:red; font-weight: bold;">*</span><small>(mins)（half-width alphanumeric)</small></label>
 <%= f.text_field :time , :placeholder => 'ex. 0:13:54 → 13  ,  1:23:38 → 83', class: 'form-control' , :style => 'width:80%;'%>
 
 
