--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
-<% provide(:title, "USER追加") %>
+<% provide(:title, "新規会員登録") %>
 <div class="container">
  
- <h3>ユーザー追加</h3>
+ <h3>新規会員登録</h3>
   <div class="col-md-6">
    
    
@@ -9,18 +9,15 @@
       <%= render 'shared/error_message', object: f.object %>
 
   <br>
-     <%= f.label :ユーザーネーム %>
+     <%= f.label :ニックネーム %>
       <%#= f.label :name %>
      <b style="color:red;">*</b>
       <%= f.text_field :name, class: 'form-control' %>
-
   <br>
      <%= f.label :メールアドレス %>
       <%#= f.label :email %>
      <b style="color:red;">*</b>
       <%= f.email_field :email, class: 'form-control' %>
-      
-
   <br>
      <%= f.label :パスワード %>
       <%#= f.label :password %>
@@ -34,11 +31,18 @@
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 <!-- -- --> 
   <br>
+     <%= f.label :SkypeID %>
+     <b style="color:red;">*</b>
+      <%#= f.label :password_confirmation, "Confirmation" %>
+      <%= f.text_field :skype, class: 'form-control' %>
+<!-- -- --> 
+  <br>
      <%= f.label :管理者権限 %>
 <%= f.check_box 'admin', {}, true, false %>
      <br><br><br>
      
 <%= f.hidden_field :time, :value => 0 %>
+<%= f.hidden_field :type_user, :value => "student" %>
 
       <%= f.submit "変更する", class: "btn btn-primary" %>
     <% end %>
