--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -35,13 +35,13 @@
 													
 							<% else %>
 												<figure class="mono">
-													<img src="<%= user.image %>" alt="img25"/>
+													<img src="<%= user.image %>"/>
 												<div class="cover-text text-center">
 													<p style="color: #fff;"></p>
 												</div>	
 													<figcaption>
 														<br><br>
-														<h2 style="font-family: 'Gloria Hallelujah', cursive;"><span style="font-size:50px;">Soryy,,,</span><br><br><br> I'm busy now.</h2>
+														<h2 style="font-family: 'Gloria Hallelujah', cursive; font-weight: 100;"><span style="font-size:50px;">Soryy,,,</span><br><br><br> I'm busy now.</h2>
 													</figcaption>
 												</figure>
 							<% end %>
