--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -56,15 +56,23 @@
                                         , cursive; font-size:1px;">User</span>
                                    <%#= image_tag '/assets/1.png', width: 136, height: 67, alt: 'a face that is unnervingly happy'%>
                                 <% end %>
+                                
                                 <%=  link_to safes_path , :class => "" do %>
                                    <i class="fa fa-table" aria-hidden="true"></i>
                                    <span style="
                                               font-family: 'Work Sans', sans-serif;
                                         , cursive; font-size:1px;">Log</span>
                                 <% end %>
-                                <%= link_to edit_user_path(current_user.id) , :class => "" , :style => "color:black;" do %>
-                                   <%#= image_tag '/assets/1.png', width: 136, height: 67, alt: 'a face that is unnervingly happy'%>
+                                
+                                
+                                <%=  link_to salary_user_path , :class => "" do %>
+                                   <i class="fa fa-jpy" aria-hidden="true"></i>
+                                   <span style="
+                                              font-family: 'Work Sans', sans-serif;
+                                        , cursive; font-size:1px;">Salary</span>
                                 <% end %>
+                                
+                                
                                 </span>
                             
                             
