--- a/app/views/users/edit3.html.erb
+++ b/app/views/users/edit3.html.erb
@@ -2,7 +2,7 @@
 <div class="container" style="padding:0 3% 0 3% ;">
  
 
-<h2 style=" font-family: 'Work Sans', sans-serif;" >Charge the TIME <span style="font-size:6px; font-family: ten-mincho, serif; font-style: normal; font-weight: 100;">タイムをチャージ</span></h2>
+<h2 style=" font-family: 'Work Sans', sans-serif;" >Charge <span style="font-size:6px; font-family: ten-mincho, serif; font-style: normal; font-weight: 100;">タイムをチャージ</span></h2>
 <br>
 
 
