fixed teachers page

--- a/app/views/users/endenter.html.erb
+++ b/app/views/users/endenter.html.erb
@@ -1,6 +1,5 @@
 <% provide(:title, "Thank you for choosing!!") %>
 
-
   <div class="">
 	
 
@@ -23,7 +22,17 @@
       <span style="font-size:20px; font-family: 'Work Sans', sans-serif;">skype : <%= @user.skype %></span>
       </p>
 
-
+<script type="text/javascript" src="https://secure.skypeassets.com/i/scom/js/skype-uri.js"></script>
+<div id="SkypeButton_Call_odysseus.ambut_1">
+ <script type="text/javascript">
+ Skype.ui({
+ "name": "call",
+ "element": "SkypeButton_Call_odysseus.ambut_1",
+ "participants": ["odysseus.ambut"],
+ "imageSize": 32
+ });
+ </script>
+</div>
 
 
 
