fixed responsiveness in the show and skype call page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -52,7 +52,7 @@
       <em><p>Description Here</p></em>
       <i class="fa fa-flag"></i> Nationality：<%= @user.country %><br><br>
       <i class="fa fa-line-chart"> </i> Skill Level：<%= @user.skill %><br><br>
-      <i class="fa fa-soccer-ball-o"> </i> Hobby：<%= @user.hobby %><br><br>
+      <i class="fa fa-soccer-ball-o"> </i> Hobbies：<%= @user.hobby %><br><br>
       <i class="fa fa-university"> </i>Profession：<%= @user.job %><br>
       </p>
       <hr>
