--- a/app/views/users/endenter.html.erb
+++ b/app/views/users/endenter.html.erb
@@ -1,48 +1,60 @@
 <% provide(:title, "Thank you for choosing!!") %>
 
-  <div class="">
-	
+<style>
 
+ @media (max-width: 768px) {
+      .btn {
+              width: 100% important;
+       } 
+    }
 
-<div style="width:100%; margin:0 0% 0 0%;">
-<center>
-      <div style="position:relative; float:right; width:100%;">
-<h2 style="font-family: 'Work Sans', sans-serif;">Thank you for choosing me!! <span style="font-size:6px; font-family: 'Work Sans', sans-serif;"></span></h2>
+</style>
+
+<script type="text/javascript" src="https://secure.skypeassets.com/i/scom/js/skype-uri.js"></script>
+
+<div class="container text-center">
+
+      <h2 style="font-family: 'Work Sans', sans-serif;">Hello and Thank you for choosing me as your teacher!!</h2>
       <br>
       <p style="font-size:10px; color: rgba(70,40,84,1); font-family: ten-mincho, serif; font-style: normal; font-weight: 100;">
       下の" contact us "ボタンを押して、講師にメッセージを送ってね:)<br><br>
       メッセージが送れない場合は、以下のSkypeIDから直接連絡してください。<br><br><br><br>
       
+      </p>
+
+      <p>
+
+<div class="col-md-6">
+
+<img src="<%= @user.image %>" class="img-responsive img-thumbnail" style="width:80%;">
+
+</div>
+
+<div class="col-md-6">
+      <h2>You can CHAT NOW</h2>
       <span class="skype-button rounded" data-contact-id="<%= @user.skype %>" data-color="#000" style="color:#fff; zoom:2;"></span>
       <span class="skype-chat" data-color-message="#000"></span>
       <script src="https://swc.cdn.skype.com/sdk/v1/sdk.min.js"></script>
       
       
       <br><br>
-      <span style="font-size:20px; font-family: 'Work Sans', sans-serif;">skype : <%= @user.skype %></span>
+
       </p>
 
-<script type="text/javascript" src="https://secure.skypeassets.com/i/scom/js/skype-uri.js"></script>
-<div id="SkypeButton_Call_odysseus.ambut_1">
- <script type="text/javascript">
- Skype.ui({
- "name": "call",
- "element": "SkypeButton_Call_odysseus.ambut_1",
- "participants": ["odysseus.ambut"],
- "imageSize": 32
- });
- </script>
+      <h2>or CALL NOW</h2>
+      <a href="skype:<%= @user.skype %>?call"><i class="fa fa-skype fa-5x"></i></a>
+
+      <h3 style="font-size:20px; font-family: 'Work Sans', sans-serif;">skype : <%= @user.skype %></h3>
+
 </div>
 
+<div class="col-md-offset-3 col-md-6 col-xs-12">
+<a type="button" class="btn" style="color: #000; width: 100%; margin-top: 30px;" href="/"><i class='fa fa-mail-reply'></i> 戻る</a>
 
+</div>
+ 
+</div>
 
-
-      </div>
-<a type="button" class="btn col-md-offset-1 col-md-5 col-xs-offset-1 " style=" margin:50px 30% 20px 30%; color:black;" href="/"><i class='fa fa-mail-reply'></i> 戻る</a>
-
-      
-      </div>
-</center>
 </div>
 
 <div style="clear: both; height:100px;"> </div>
