minor fixed on the teacher contact page

--- a/app/views/users/endenter.html.erb
+++ b/app/views/users/endenter.html.erb
@@ -14,7 +14,7 @@
 
 <div class="container text-center">
 
-      <h2 style="font-family: 'Work Sans', sans-serif;">Hello and Thank you for choosing me as your teacher!!</h2>
+      <h2 style="font-family: 'Work Sans', sans-serif;">Hello There! My name is Teacher <strong><%= @user.name %></strong>. <br> Thank you for choosing me as your teacher!!</h2>
       <br>
       <p style="font-size:10px; color: rgba(70,40,84,1); font-family: ten-mincho, serif; font-style: normal; font-weight: 100;">
       下の" contact us "ボタンを押して、講師にメッセージを送ってね:)<br><br>
@@ -52,7 +52,7 @@
 <a type="button" class="btn" style="color: #000; width: 100%; margin-top: 30px;" href="/"><i class='fa fa-mail-reply'></i> 戻る</a>
 
 </div>
- 
+
 </div>
 
 </div>
