removed user_current time for now since its causing issues, will fix this later

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,13 +27,13 @@
                 font-family: 'Black Ops One', cursive;
                 , cursive; ">
                                <i class="fa fa-hourglass" aria-hidden="true"></i>
-                               <%= current_user.time/60 %>:
-                               <% @mins = current_user.time % 60 %>
-                               <% if @mins % 60 < 10 %>
-                               0<%= @mins %>
-                               <% else %>
-                               <%= @mins %>
-                               <% end %>
+                               <%#= current_user.time/60 %>:
+                               <%# @mins = current_user.time % 60 %>
+                               <%# if @mins % 60 < 10 %>
+                               0<%#= @mins %>
+                               <%# else %>
+                               <%#= @mins %>
+                               <%# end %>
                                </span>
                            </p>
                         </li>
