--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,16 +4,9 @@
 <nav class="navbar navbar-expand-lg">
     
                 <a class="navbar-brand" href="/">
-                <span style="
-                font-family: 'Quicksand', sans-serif;
-                font-family: 'Nothing You Could Do', cursive;
-                font-family: 'Black Ops One', cursive;
-                , cursive; font-size:40px;">timee.</span>
-                <br>
-                <span style="
-                      font-family: 'Work Sans', sans-serif;
-                , cursive; font-size:3px; position:relative; top:-10px;">You NEVER lack TIME to STUDY</span>
-                
+                <img src="timee-logo.jpg" class="img img-responsive">
+                <p style="font-family: 'Work Sans', sans-serif, cursive; font-size:12px;">
+                You NEVER lack TIME to STUDY</p>
                 </a>
 
                 <% unless current_user.type_user == "teacher"%>
