--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
 <nav class="navbar navbar-expand-lg">
     
                 <a class="navbar-brand" href="/">
-                <img src="timee-logo.jpg" class="img img-responsive">
+                <img src="../timee-logo.jpg" class="img img-responsive">
                 <p style="font-family: 'Work Sans', sans-serif, cursive; font-size:12px;">
                 You NEVER lack TIME to STUDY</p>
                 </a>
